--- a/turtlebot_gazebo/package.xml
+++ b/turtlebot_gazebo/package.xml
@@ -23,4 +23,9 @@
   <run_depend>turtlebot_description</run_depend>
   <run_depend>turtlebot_navigation</run_depend>
   <run_depend>xacro</run_depend>
+  
+  <export>
+    <gazebo_ros gazebo_model_path="${prefix}/models"/>
+  </export>
+
 </package>
